syntax = "proto3";
import "Item.proto";
import "ItemInfo.proto";
option java_package = "org.sq.gameDemo.common.proto";
option java_outer_classname = "TradePt";

//实体类型
message Trade {
    int32 id = 1;
    int32 acceptUnId = 2;
    int32 ownerUnId = 3;
    int32 itemInfoId = 4;
    int32 count = 5;
    int32 tradeModel = 6;
    uint64 startTime = 7;
    uint64 keepTime = 8;
    int32 price = 9;
    bool finish = 10;
    bool success = 11;
    uint64 auctionItemId = 12;
    Item tradeItem = 13;
    ItemInfo accpertItemInfo = 14;
    repeated Item item = 15;
}

//请求
message TradeRequestInfo {
    uint64 msg_id = 1;      //消息id
    uint64 time = 2;        //时间戳(单位:毫秒)
    int32 id = 3;       //获取全部写-1
    uint64  accpeterId = 4;
    uint64 auctionItemId = 5;
    int32 autionCount = 6;
    int32 accpetCount = 7;
    int32 itemInfoId = 8;
    int32 price = 9;
    int32 tradeModel = 10;

}
//响应
message TradeResponseInfo {
    uint64 msg_id = 1;      //消息id
    int32 result  = 2;
    uint64 time = 3;        //时间戳
    string content = 4;

    repeated Trade trade = 5;
}

